# arya

./: .gitignore  CMakeLists.txt  README.md
assets/: commands.json
includes/: Arya.hpp  CameraGetter.hpp  ContinuousRecorder.hpp  ConversationEngine.hpp  Globals.hpp  IntentEngine.hpp  SpeechRecognizer.hpp  TranscriptAnalyzer.hpp  Utils.hpp  main.hpp
includes/donat_lib/: Globals.hpp  GraphicalInterface.hpp  MyRect.hpp  MyWindow.hpp  OpeningAnimation.hpp
includes/graphical/: GraphicalInterface.hpp  OpeningAnimation.hpp  ViewInterface.hpp
src/: Arya.cpp  CameraGetter.cpp  ContinuousRecorder.cpp  ConversationEngine.cpp  IntentEngine.cpp  SpeechRecognizer.cpp  TranscriptAnalyzer.cpp  Utils.cpp  main.cpp
src/donat_lib/: GraphicalInterface.cpp  MyWindow.cpp  OpeningAnimation.cpp
src/graphical/: GraphicalInterface.cpp  OpeningAnimation.cpp  ViewInterface.cpp
